[build-system]
requires = ['setuptools>=68.2']
build-backend = 'setuptools.build_meta'


[project]
name = "ezdata"
version = "0.1.0"
authors = [
  { name = "Asger Jon Vistisen", email = "asgerjon2@gmail.com" },
]
description = "A simple base class for dataclasses"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/AsgerJon/ezdata"
"Bug Tracker" = "https://github.com/AsgerJon/ezdata"
