[METADATA]
name = EZData
version = 0.1.0
author = Asger Jon Vistisen
author_email = asgerjon2@gmail.com
description = Easy base class for dataclasses
long_description = file:README.md,LICENSE
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Development Status :: 7 - Inactive
keywords =
    utilities
    convenience
    Asger Jon Vistisen
[OPTIONS]
package_dir =
    =src
packages = find:
python_requires = >=3.10
[options.packages.find]
where = src
